--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,8 @@ android {
 dependencies {
 
     // Pagination
-    implementation 'androidx.paging:paging-runtime:3.1.1'
-    implementation 'androidx.paging:paging-compose:3.2.0-beta01'
+    implementation 'androidx.paging:paging-runtime:3.2.0'
+    implementation 'androidx.paging:paging-compose:3.2.0'
 
     // DataStore
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
